Updates from ShareLaTeX

--- a/dissertation.bib
+++ b/dissertation.bib
@@ -162,3 +162,17 @@
 	year		 = "2018",
 	note		 = {Consult. 14 Jan. 2019; Disponível em \url{https://www.autenticacao.gov.pt/cc-documentacao}}
 }
+    
+%%saml
+@article{hughes2005security,
+  title={Security assertion markup language (saml) v2. 0 technical overview},
+  author={Hughes, John and Maler, Eve},
+  journal={OASIS SSTC Working Draft sstc-saml-tech-overview-2.0-draft-08},
+  pages={29--38},
+  year={2005}
+}
+
+@misc{samlProviderPic,
+    title = {SAML 2.0 Integration with IdentityServer4},
+    note = {Consult. 14 Jan. 2019; Disponível em \url{https://www.identityserver.com/articles/saml-20-integration-with-identityserver4/}}
+}
