--- a/dissertation.sty
+++ b/dissertation.sty
@@ -183,8 +183,9 @@
 
 % Better looking bibliography references
 \usepackage[round,numbers]{natbib}
-%\bibliographystyle{plainnat}
-\bibliographystyle{unsrt}
+\bibliographystyle{plainnat}
+%\usepackage[round,numbers]{natbib}
+%\bibliographystyle{unsrt}
 
 % Getting things done in LaTeX
 \usepackage{todonotes}
