--- a/dissertation.tex
+++ b/dissertation.tex
@@ -19,6 +19,7 @@
 \setcounter{secnumdepth}{3}
 \setcounter{tocdepth}{3}
 \usepackage{pgfplots}
+\usepackage{csquotes}
 
 % ACRONYMS -----------------------------------------------------
 
