--- a/sec/acronyms.tex
+++ b/sec/acronyms.tex
@@ -13,7 +13,7 @@
 \newacronym{ama}{AMA}{Agência para a Modernização Administrativa}
 \newacronym{auth.gov}{Auth.Gov}{Autenticação.Gov}
 \newacronym{pki}{PKI}{Public key infrastucture}
-\newacronym{saml2}{SAML 2.0}{Security Assertion Markup Language v2.0}
+\newacronym{saml}{SAML}{Security Assertion Markup Language}
 \newacronym{stork}{STORK}{Secure identity across borders linked}
 
 %%baseado com jwt
@@ -37,3 +37,7 @@
 \newacronym{asic}{ASIC}{Application-specific integrated circuit}
 \newacronym{usenix}{USENIX}{The Advanced Computing Systems Association}
 \newacronym{posix}{POSIX}{Portable Operating System Interface}
+\newacronym{ocsp}{OCSP}{Online Certificate Status Protocol}
+\newacronym{xml}{XML}{Extensible Markup Language}
+\newacronym{oasis}{OASIS}{Organization for the Advancement of Structured Information Standards}
+\newacronym{sso}{SSO}{Single-Sign On}
