--- a/sec/acronyms.tex
+++ b/sec/acronyms.tex
@@ -1,6 +1,5 @@
 % here are the acronym entries
-\newacronym{mei}{MEI}{Mestrado em Engenharia Informática}
-\newacronym{di}{DI}{Departamento de Informática}
+\newacronym{miei}{MIEI}{Mestrado Integrado em Engenharia Informática}
 \newacronym{um}{UM}{Universidade do Minho}
 \newacronym{dglab}{DGLAB}{Direção-Geral do Livro, dos Arquivos e das Bibliotecas}
 
@@ -11,7 +10,6 @@
 \newacronym{cc}{CC}{Cartão de Cidadão}
 \newacronym{cmd}{CMD}{Chave Móvel Digital}
 \newacronym{ama}{AMA}{Agência para a Modernização Administrativa}
-\newacronym{auth.gov}{Auth.Gov}{Autenticação.Gov}
 \newacronym{pki}{PKI}{Public key infrastucture}
 \newacronym{saml}{SAML}{Security Assertion Markup Language}
 \newacronym{stork}{STORK}{Secure identity across borders linked}
@@ -21,7 +19,6 @@
 \newacronym{hmac}{HMAC}{Hash-based Message Authentication Code}
 \newacronym{rsa}{RSA}{Rivest-Shamir-Adleman}
 \newacronym{sha}{SHA}{Secure Hash Algorithm}
-\newacronym{sha256}{SHA256}{Secure Hash Algorithm c/ 256bits}
 
 %%bcrypt
 \newacronym{owasp}{OWASP}{Open Web Application Security Project}
