--- a/sections/0_resumo.tex
+++ b/sections/0_resumo.tex
@@ -6,4 +6,4 @@ Com o intuito de simplificar a gestão documental, o governo tem desenvolvido di
 
 O \gls{clav}, surge como uma dessas estratégias. Este visa a classificação e a avaliação de toda a documentação que circula na Administração Pública portuguesa, utilizando um referencial comum que permite o desenvolvimento de instrumentos de natureza transversal a aplicar em contexto organizacional.
 
-Esta dissertação tem como objetivo primário, a integração dos serviços da plataforma \gls{auth.gov} no \gls{clav}, bem como a criação de estratégias apropriadas de gestão de utilizadores, autenticação de pedidos referentes à \emph{API} pública disponibilizada e autenticação no backend.
+Esta dissertação tem como objetivo primário, a integração dos serviços da plataforma \emph{Autenticação.Gov} no \gls{clav}, bem como a criação de estratégias apropriadas de gestão de utilizadores, autenticação de pedidos referentes à \emph{API} pública disponibilizada e autenticação no backend.
