--- a/sections/1_introducao.tex
+++ b/sections/1_introducao.tex
@@ -26,26 +26,25 @@ Este trabalho enquadra-se no Projeto \gls{clav}, nas suas terceiras e quarta fas
 
 \cleardoublepage
 \section{Objetivos}
-%ver o que ja foi enviado
 
 A realização desta dissertação tem como objetivo os seguintes pontos:
 
 \begin{itemize}
-    \item Estudo e interpretação dos serviços da plataforma Autenticação.Gov e respetivos requisitos.
+    \item Estudo e interpretação dos serviços da plataforma Autenticação.Gov e respectivos requisitos.
     \item Integração e desenvolvimento de métodos apropriados de registo e login de utilizadores, bem como a gestão dos mesmos, utilizando a ferramenta Autenticação.Gov.
     \item Criação de métodos apropriados para autenticação de pedidos via a API pública disponibilizada.
-    \item Avaliação dos métodos gerados, garantindo assim uma correta implementação dos mesmos na plataforma M51-CLAV.
+    \item Avaliação dos métodos gerados, garantindo assim uma correta implementação dos mesmos na plataforma \gls{clav}.
 \end{itemize}
 
 %\cleardoublepage
 \section{Metodologia}
-%ver o que ja foi enviado
 
 A metodologia para a realização desta dissertação segue os seguintes passos:
 
 \begin{itemize}
-    \item Leitura e análise inicial do projeto.
+    \item Leitura e análise inicial do projecto.
+    \item Estudo das ferramentas já implementadas.
     \item Estudo da ferramenta Autenticação.Gov e requisitos por ela impostos.
     \item Desenvolvimento de um protótipo com funcionalidades semelhantes ou idênticas à esperada.
-    \item Implementação na plataforma M51-CLAV.
+    \item Implementação na plataforma \gls{clav}.
 \end{itemize}
