--- a/dissertation.bib
+++ b/dissertation.bib
@@ -162,6 +162,27 @@
 	year		 = "2018",
 	note		 = {Consult. 14 Jan. 2019; Disponível em \url{https://www.autenticacao.gov.pt/cc-documentacao}}
 }
+
+@misc{x509,
+    title = {X.509 : Information technology - Open Systems Interconnection - The Directory: Public-key and attribute certificate frameworks},
+    author = {International Telecommunication Union},
+    note = {Consult. 18 Mar. 2019; Disponível em \url{https://www.itu.int/rec/T-REC-X.509}}
+}
+
+@inproceedings{pki,
+ author = {Adams, Carlisle and Lloyd, Steve},
+ title = {Understanding PKI: Concepts, Standards, and Deployment Considerations},
+ year = {2002},
+ isbn = {0672323915},
+ edition = {2nd},
+ publisher = {Addison-Wesley Longman Publishing Co., Inc.},
+ address = {Boston, MA, USA},
+} 
+
+@misc{ccPic,
+    title= {O Cartão de Cidadão - Autenticação.GOV},
+    note= {Consult. 21 Fev. 2019; Disponível em \url{https://www.autenticacao.gov.pt/o-cartao-de-cidadao}}
+}
     
 %%saml
 @article{hughes2005security,
