--- a/dissertation.tex
+++ b/dissertation.tex
@@ -20,6 +20,7 @@
 \setcounter{tocdepth}{3}
 \usepackage{pgfplots}
 \usepackage{csquotes}
+\usepackage{indentfirst}
 
 % ACRONYMS -----------------------------------------------------
 
