--- a/sec/acronyms.tex
+++ b/sec/acronyms.tex
@@ -5,6 +5,7 @@
 
 %clav
 \newacronym{clav}{CLAV}{Projeto M51-CLAV-Arquivo digital: Plataforma modular de classificação e avaliação da informação pública}
+\newacronym{iap}{iAP}{Interoperabilidade na Administração Pública}
 \newacronym{ap}{AP}{Administração Pública}
 \newacronym{lc}{LC}{Lista Consolidada}
 \newacronym{cc}{CC}{Cartão de Cidadão}
@@ -24,6 +25,7 @@
 \newacronym{owasp}{OWASP}{Open Web Application Security Project}
 
 %%random
+\newacronym{https}{HTTPS}{Hyper Text Transfer Protocol Secure}
 \newacronym{ssl}{SSL}{Secure Sockets Layer}
 \newacronym{tls}{TLS}{Transport Layer Security}
 \newacronym{md5}{md5}{Message-Digest algorithm 5}
@@ -38,3 +40,4 @@
 \newacronym{xml}{XML}{Extensible Markup Language}
 \newacronym{oasis}{OASIS}{Organization for the Advancement of Structured Information Standards}
 \newacronym{sso}{SSO}{Single-Sign On}
+\newacronym{itu}{ITU}{International Telecommunication Union}
