--- a/sections/0_abstract.tex
+++ b/sections/0_abstract.tex
@@ -6,4 +6,7 @@ With the purpose of simplifying the process of managing such documents, the port
 
 The \gls{clav} project comes up as one of those strategies. This allows to classify and evaluate all the documentation that circulates in the Portuguese Public Administration, using a common referential, that allows for the development of instruments of transversal nature that are applied in an organizational context.
 
-This dissertation has as its primary objective, the integration of the services provided by the \emph{Autenticação.Gov} plataform in the \gls{clav} project, as well as the creation of appropriate strategies of user management, authentication of requests refering to the public API, as well as  backend authentication.
+This dissertation has as its primary objective, the integration of the services provided by the \emph{Autenticação.Gov} plataform in the \gls{clav} project, as well as the creation of appropriate strategies of user management, authentication of requests refering to the public API, as well as  backend authentication and overall security.
+
+\vspace{5cm}
+\keywords{CLAV, Autenticação.Gov, Authentication, Security}
