--- a/sections/2_sota.tex
+++ b/sections/2_sota.tex
@@ -34,9 +34,9 @@ O \emph{Passport} é um middleware de autenticação, desenvolvido para \emph{No
 
 Devido à natureza do \emph{Passport}, este é extremamente fácil de implementar numa dada aplicação, devido ao seu forte encapsulamento e ao facto de delegar qualquer funcionalidade, que não seja a autenticação, para a aplicação.
 
-Devido à natureza das aplicações Web modernas, a autenticação pode ser feita por diversas estratégias. A estratégia utilizada neste projeto recaiu sobre a escolha mais "tradicional", uma autenticação local com campos para \emph{username} e \emph{password}.
+Devido à natureza das aplicações Web modernas, a autenticação pode ser feita por diversas estratégias. As estratégias exploradas neste projeto recairam sobre a escolha mais "tradicional", uma autenticação local com campos para \emph{username} e \emph{password} e a autenticação com o auxílio da ferramenta Autenticação.Gov.
 
-Embora com o aumento exponencial da popularidade de implementações de autenticação baseadas em redes sociais, através de protocolos baseados em \emph{OAuth}\footnote{Protocolo open-source que permite autenticação de forma standard e segura, entre aplicações desktop, web e mobile.}, tais como \emph{Google+} e \emph{Facebook}, foi decidido desde uma fase inicial que tais estratégias não seriam consideradas devido ao carácter profissional da plataforma.
+Embora exista um aumento exponencial de implementações de autenticação baseadas em redes sociais, através de protocolos desenvolvidos em acordo com o \emph{OAuth}\footnote{Protocolo open-source que permite autenticação de forma standard e segura, entre aplicações desktop, web e mobile.}, tais como \emph{Google+} e \emph{Facebook}, foi decidido desde uma fase inicial que tais estratégias não seriam consideradas devido ao carácter profissional da plataforma.
 
 Devido a cada aplicação possuir necessidades diferentes, o \emph{Passport} guarda cada estratégia de autenticação em módulos independentes, deixando assim a cargo do programador que estratégias empregar, sem criar dependências desnecessárias.
 
@@ -57,7 +57,7 @@ Em geral, o \emph{hashing} é caraterizado como uma operação de sentido único
 Embora esta noção esteja correta e seja de facto impossível, através de um texto já processado por uma função de \emph{hash}, reconstruir o texto original em questão, este não é infalível.
 
 \cleardoublepage
-\subsubsection{Vulnerabilidades}
+\subsubsection{Vulnerabilidades} \label{vulnerabilidades}
 
 Para exemplificar vulnerabilidades existentes nas funções criptográficas que recorrem apenas ao \emph{hashing} de passwords, vamos recorrer ao algoritmo \textbf{SHA-1}, pertencente à familia de algoritmos \gls{sha}.
 
@@ -65,7 +65,7 @@ O principal problema das funções da família \gls{sha} assenta no facto de que
 
 Embora cálculos mais rápidos levem ao desenvolvimento de algoritmos mais eficientes a nível de computação, também abrem portas a ataques \emph{bruteforce}. Atualmente, com o auxilio de \gls{cpu} e \gls{gpu} modernas, é possível calcular milhões, ou até bilhões de \emph{hashes} por segundo.
 
-Outro problema assenta no facto que qualquer função responsável por \emph{hashing}, para o mesmo texto, retorna sempre o mesmo resultado de \emph{hash}, como podemos verificar na tabela seguinte.
+Outro problema assenta no facto que qualquer função responsável por \emph{hashing}, para o mesmo texto, retorna sempre o mesmo resultado de \emph{hash}, como podemos verificar na tabela \ref{tab:sha1}.
 
 \begin{center}
     \begin{tabular}{ |p{2cm}|p{2cm}|p{8cm}|  }
@@ -86,9 +86,9 @@ Outro problema assenta no facto que qualquer função responsável por \emph{has
 
 Como exemplificado na Tabela \ref{tab:sha1}, o utilizador \textbf{António} e \textbf{Gustavo} partilham a mesma password, logo o resultado após o \emph{hashing} da mesma é idêntico. 
 
-Embora passwords idênticas sejam extremamente comuns, o facto do \emph{hash} resultante ser idêntico apresenta um fator de risco muito mais elevado do que as passwords serem idênticas, pois estaria a expor um número exorbitante de utilizadores a uma grave falha de segurança.
+Embora passwords idênticas sejam extremamente comuns, o facto do \emph{hash} resultante ser idêntico apresenta um factor de risco muito mais elevado do que as passwords serem idênticas, pois estaria a expor um número exorbitante de utilizadores a uma grave falha de segurança.
 
-Porém, o simples acto de \emph{hashing} de passwords não é uma solução segura. Este rapidamente foi descartado devido a ser extremamente suscetível a ataques baseado em \emph{rainbow tables}, também conhecidos por \emph{ataques de dicionário}.
+Porém, o simples acto de \emph{hashing} de passwords não é uma solução segura. Este rapidamente foi descartado devido a ser extremamente susceptível a ataques baseado em \emph{rainbow tables}, também conhecidos por \emph{ataques de dicionário}.
 
 Este ataque tem como base o facto de algoritmos como o \emph{SHA-1} ser extremamente rápido e eficiente, sendo que em vez de calcular em tempo real \emph{hashes} aleatórios, utilizam valores de hash pré-calculados para toda e qualquer possível combinação de caracteres, utilizando para validação o método \emph{bruteforce}.
 
@@ -104,7 +104,7 @@ De modo a solucionar o problema proveniente de ataques \emph{bruteforce} baseado
 
 De acordo com a \gls{owasp}, o \emph{salt} é um valor aleatório de tamanho fixo, considerado criptograficamente forte, que é adicionado ao input de uma dada função de \emph{hash}, independentemente deste do input ser ou não único.
 
-Na tabela seguinte podemos verificar a importância de utilizar a técnica de \emph{salting} juntamente com o \emph{hashing} de passwords.
+Na tabela \ref{tab:sha1_salt} podemos verificar a importância de utilizar a técnica de \emph{salting} juntamente com o \emph{hashing} de passwords.
 
 \begin{center}
     \begin{tabular}{ |p{1.7cm}|p{2cm}|p{1.5cm}|p{8cm}|  }
@@ -113,10 +113,10 @@ Na tabela seguinte podemos verificar a importância de utilizar a técnica de \e
         \hline
         Utilizador & Password & Salt &\emph{Hashed} password + \textbf{salt}\\
         \hline 
-        \textcolor{red}{António} & \textcolor{red}{12345} & r8ZGQH & c783b62c876b77310818b3b4cc6863ca008f7d10\\
+        \textcolor{red}{António} & \textcolor{red}{12345} & r8ZGQH & \textbf{c783b62c876b77310818b3b4cc6863ca008f7d10}\\
         Alice & sup3rs3gur4 & yvL9H8 & d68c7166f916b91b66dda685e8eee1af70528933\\
         Manuel & uncrackabl3 & C4uHRv & 87d8e4e7ae79ab2487133a6513e35cb511687d5a\\
-        \textcolor{red}{Gustavo} & \textcolor{red}{12345} & jKM2Lh & f69e3288fc17c383cab12aa78a725d675610e81a\\
+        \textcolor{red}{Gustavo} & \textcolor{red}{12345} & jKM2Lh & \textbf{f69e3288fc17c383cab12aa78a725d675610e81a}\\
         Joana & 1a2b3c4d & WNj7Vt & 866038b3d43de9a9b0b49a6ee1ffc6cbf64d3c6d\\
         \hline
     \end{tabular}
@@ -134,9 +134,9 @@ Em suma, o método de autenticação ideal deve implementar ambos estes métodos
 \cleardoublepage
 \subsection{bcrypt}
 
-De modo a solucionar os problemas referidos na secção anterior, foi necessário proceder ao desenvolvimento de uma função criptográfica que não só solucionasse o problema relacionado com ataques via \emph{rainbow tables}, mas também fosse capaz de acompanhar os avanços tecnológicos a nível computacional.
+De modo a solucionar os problemas referidos na secção \ref{vulnerabilidades}, foi necessário proceder ao desenvolvimento de uma função criptográfica que não só solucionasse o problema relacionado com ataques via \emph{rainbow tables}, mas também fosse capaz de acompanhar os avanços tecnológicos a nível computacional.
 
-Para tal, Niels Provos e David Mazières desenvolveram a função de \emph{hashing} designada por \textbf{bcrypt}\cite{provos1999future}. Esta foi apresentada em 1999 na \gls{usenix}, sendo uma função baseada na cifra \emph{Blowfish}, desenvolvia por Bruce Schneier e apresentada em 1993.
+Para tal, Niels Provos e David Mazières desenvolveram a função de \emph{hashing} designada por \textbf{bcrypt}\cite{provos1999future}. Esta foi apresentada em 1999 na \gls{usenix}, sendo uma função baseada na cifra \emph{Blowfish}\footnote{Cifra assimétrica utilizada em criptografia.}, desenvolvia por Bruce Schneier e apresentada em 1993.
 
 Além de incorporar um \emph{salt} para proteger contra ataques via \emph{rainbow tables}, esta foi desenvolvida para ser uma função adaptável, sendo que o número de iterações pode ser incrementado de modo a aumentar o número de ciclos máquina necessários para o cálculo do \emph{hash}. 
 
@@ -170,7 +170,7 @@ Esta string pode ser dividida em 4 secções:
     \item Password após \emph{hash} da mesma(representada a laranja).
 \end{itemize}
 
-A combinação destas duas técnicas faz com que, até à data de publicação desta pré-dissertação, o algoritmo \emph{bcrypt} ainda não tenha sido quebrado, sendo que se trata do algoritmo escolhido por sistemas operativos como o \emph{OpenBSD} e \emph{SUSE Linux} para o \emph{hashing} das suas passwords.
+A combinação destas duas técnicas faz com que, até à data de publicação desta pré-dissertação, o algoritmo \emph{bcrypt} ainda não tenha sido quebrado, sendo que se trata do algoritmo escolhido por sistemas operativos como o \emph{OpenBSD}\footnote{Distribuição Unix open-source \url{https://www.openbsd.org}} e \emph{SUSE Linux}\footnote{Distribuição Unix open-source desenvolvida para soluções enterprise \url{https://www.suse.com/}} para o \emph{hashing} das suas passwords.
 
 Esta fama levou a que o \emph{bcrypt} seja considerado por muitos, o standard da indústria em termos de encriptação de passwords.
 
@@ -198,10 +198,11 @@ Tendo em consideração que a \emph{key} é um valor aleatório variável entre 
 
 De modo a prolongar o tempo de execução desta função, é aplicada a expansão da \emph{key} $2^{cost}$ vezes. Esta alteração é a maior distinção entre o algoritmo \emph{Blowfish} original e o \emph{Eksblowfish}, sendo a causa do \emph{bcrypt} ser considerado um algoritmo adaptável.
 
-No gráfico seguinte, podemos ver uma relação entre o factor de custo e o tempo de execução do algoritmo \emph{bcrypt}. \textbf{(teste efetuado com processador Intel Core i7-4770K 4c/8t)}
+\newpage
+No gráfico seguinte, podemos ver uma relação entre o factor de custo e o tempo de execução do algoritmo \emph{bcrypt}\footnote{Teste efetuado com processador Intel Core i7-4770K 4C/8T}.
 
 \begin{center}
-    \begin{tikzpicture}
+    \begin{tikzpicture} 
         \begin{axis}[
             xlabel={Valor do parametro \emph{cost}},
             ylabel={Tempo de execução},
@@ -284,7 +285,7 @@ Outro problema que tem ganho tração nos últimos anos, é o aparecimento de so
 
 Um \gls{fpga} é um circuito integrado que tem a possibilidade de ser reprogramado através de \emph{bitstreams}, de modo a ser utilizado em aplicações diferentes, como por exemplo, cálculos de hash baseados no algoritmo SHA-1, SHA-256, etc. Enquanto que um \gls{asic}, embora também seja um circuito integrado, apenas consegue fazer uma função e não pode ser reprogramado, no entanto oferece performance muito superior a um \gls{fpga}.
 
-Na tabela seguinte exploramos a performance em hashes por segundo (H/s) entre \gls{cpu}\footnote{\gls{cpu} fabricado pela Intel, desenvolvido na arquitetura \emph{Sandy Bridge}.}, \gls{gpu}\footnote{\gls{gpu} fabricada pela NVIDIA, desenvolvida na arquitetura \emph{Maxwell}.} e \gls{fpga}\footnote{Ambos os \gls{fpga} utilizados para comparação são desenvolvidos pela Xilinx.} relativamente ao algoritmo \emph{bcrypt}.
+Na tabela \ref{tab:bcrypt_hashrate} exploramos a performance em hashes por segundo (H/s) entre \gls{cpu}\footnote{\gls{cpu} fabricado pela Intel, desenvolvido na arquitetura \emph{Sandy Bridge}.}, \gls{gpu}\footnote{\gls{gpu} fabricada pela NVIDIA, desenvolvida na arquitetura \emph{Maxwell}.} e \gls{fpga}\footnote{Ambos os \gls{fpga} utilizados para comparação são desenvolvidos pela Xilinx.} relativamente ao algoritmo \emph{bcrypt}.
 
 \begin{center}
     \begin{tabular}{ |p{1cm}|p{2.5cm}|p{2cm}|p{2cm}|p{1.75cm}|p{0.9cm}|  }
@@ -313,13 +314,13 @@ Felizmente, tal aplicação de hardware pare este efeito ainda não foi detetada
 
 De modo a fazer uma gestão de utilizadores mais aprofundada, foi necessário implementar métodos capazes de não só limitar o número de utilizadores ativos a cada dado momento, mas também manter as sessões iniciadas no caso de falha do servidor.
 
-Numa primeira fase do projeto \gls{clav} foi implementada uma solução baseada em \emph{JSON Web Token}, que será explicada na subsecção seguinte. Embora esta se tenha provado eficaz, a mesma não era capaz de manter as sessões iniciadas no caso de uma falha súbita do servidor, ou seja, se o servidor por algum motivo sofresse de uma falha de energia e tivesse de reiniciar, devido às sessões estarem guardadas localmente, as mesmas eram perdidas.
+Numa primeira fase do projeto \gls{clav} foi implementada uma solução baseada em \emph{JSON Web Token}, que será explicada na subsecção \ref{jwt_1}. Embora esta se tenha provado eficaz, a mesma não era capaz de manter as sessões iniciadas no caso de uma falha súbita do servidor, ou seja, se o servidor por algum motivo sofresse de uma falha de energia e tivesse de reiniciar, devido às sessões estarem guardadas localmente, as mesmas eram perdidas.
 
 Outro fator decisivo contra esta implementação assenta no facto de não ser possível recorrer ao paralelismo da aplicação através do \emph{nginx}\footnote{Mais informação em \url{https://www.nginx.com}}, pois a comunicação entre processos paralelos não permite a partilha do token guardado localmente.
 
 Para tal, foi necessário recorrer a outra abordagem, o armazenamento de sessões em base de dados, neste caso em \emph{MongoDB}.
 
-\subsubsection{Validação através de JSON Web Token}
+\subsubsection{Validação através de JSON Web Token} \label{jwt_1}
 
 Durante o desenvolvimento do projeto \gls{clav} foi discutida a implementação de um mecanismo capaz de terminar sessões automaticamente, de modo a diminuir o número de sessões ativas, bem como evitar possíveis falhas de segurança.
 
@@ -339,7 +340,7 @@ Para tal foi implementado, juntamente com o \emph{Passport}, uma estratégia cap
     \end{algorithmic}
 \end{algorithm}
 
-Como explicado na secção anterior, através do uso do \emph{JSON Web Token} é possível passar no atributo \emph{exp} uma data de expiração, após a qual o token se torna inválido, terminando assim a sessão do utilizador.
+Através do uso do \emph{JSON Web Token}, é possível povoar o atributo \emph{exp} com uma data de expiração, após a qual o token se torna inválido, terminando assim a sessão do utilizador.
 
 Para tal, quando a estratégia de login local do \emph{Passport} é invocada, é necessário proceder à assinatura de um token \gls{jwt} e atribuí-lo à sessão do utilizador atual.
 
@@ -418,7 +419,9 @@ Em suma, o armazenamento de sessões em base de dados possui todas as qualidades
 
 O Autenticação.Gov surge da necessidade de identificação unívoca de um utilizador perante sítios na Web. Cabe a esta solução o processo de autenticação e o fornecimento dos atributos do utilizador necessários a que cada entidade possa efetuar a identificação do utilizador.
 
-O Autenticação.Gov, em conjunto com o \gls{cc}, também permite fazer uso da funcionalidade de Federação de Identidades da Plataforma de Interoperabilidade da Administração Pública para a identificação sectorial de um Cidadão, isto é, a obtenção dos seus identificadores junto das entidades participantes da iniciativa do Cartão de Cidadão. É também responsável pela gestão dos vários fornecedores de atributos disponíveis e possui uma estreita ligação com a infraestrutura de chave pública do Cartão de Cidadão (\gls{pki}), com o intuito de manter elevados níveis de segurança e privacidade no processo de autenticação e identificação.
+O Autenticação.Gov, em conjunto com o \gls{cc}, também permite fazer uso da funcionalidade de Federação de Identidades da \gls{iap} para a identificação sectorial de um Cidadão, isto é, a obtenção dos seus identificadores junto das entidades participantes da iniciativa do Cartão de Cidadão. 
+
+É também responsável pela gestão dos vários fornecedores de atributos disponíveis e possui uma estreita ligação com a infraestrutura de chave pública do Cartão de Cidadão (\gls{pki}), com o intuito de manter elevados níveis de segurança e privacidade no processo de autenticação e identificação, utilizando para tal a linguagem \gls{saml}, sendo esta explicada em maior detalhe na secção \ref{saml_section}.
 
 Através do Autenticação.Gov é possível a criação de credenciais comuns a todos os sites da Administração Pública, assegurando que o utilizador se necessita de autenticar apenas uma única vez para executar um ou vários serviços que podem ser iniciados em portais transversais (como o Portal do Cidadão ou o Portal da Empresa).
 
@@ -464,7 +467,7 @@ Relativamente ao âmbito do projeto \gls{clav} irá ser implementada a autentica
 
 \subsection{Funcionamento do Autenticação.Gov}
 
-De acordo com o manual de Integração do \emph{Autenticação.Gov} providenciado pela \gls{ama}, existem 4 interações\cite{manualAuthGov} entre o \emph{Autenticação.Gov} e a entidade/serviço a aceder:
+De acordo com o manual de Integração do \emph{Autenticação.Gov} providenciado pela \gls{ama}, existem 4 interacções\cite{manualAuthGov} entre o \emph{Autenticação.Gov} e a entidade/serviço a aceder:
 
 \begin{enumerate}
     \item O utilizador pretende aceder à área privada do portal de uma entidade, na qual é necessário que comprove a sua identidade;
@@ -478,7 +481,128 @@ De acordo com o manual de Integração do \emph{Autenticação.Gov} providenciad
 \end{enumerate}
 
 \cleardoublepage
-\subsubsection{SAML 2.0}
+\subsubsection{Par de chaves públicas/privadas}
+
+O Autenticação.Gov utiliza um mecanismo de autenticação de pedidos baseado em pares de chaves públicas e privadas.
+
+Para tal, é necessário gerar um par de chaves \gls{rsa}, do qual resultam duas chaves:
+\begin{itemize}
+    \item Chave pública: chave de conhecimento público, disponível para qualquer utilizador, não possuindo qualquer tipo de informação sensível.
+    \item Chave privada: chave de conhecimento privado, ou seja, apenas o criador da chave possui informação sobre a mesma.
+\end{itemize}
+
+Na autenticação com o Cartão de Cidadão, é enviado um pedido para o Autenticação.Gov, sendo este assinado digitalmente com auxílio da chave privada gerada previamente.
+
+Como o Autenticação.Gov possui acesso à chave pública previamente gerada, é-lhe possível verificar instantaneamente a validade do pedido em causa, sendo este processado caso seja válido, ou negado caso contrário.
+
+Na figura \ref{fig:par_chaves} podemos verificar que o funcionamento da assinatura digital baseado em pares de chaves segue os seguintes passos:
+
+\begin{enumerate}
+    \item É criado um texto/pedido de autenticação/etc.
+    \item Esse pedido previamente criado é assinado com a chave privada do remetente.
+    \item Após a recepção do mesmo pelo destinatário, é feita a leitura com o auxílio da chave pública do remetente presente no certificado X509 do mesmo.
+\end{enumerate}
+
+\begin{figure}[h]
+    \centering
+    \includegraphics[width=0.9\textwidth]{img/cc/OpenPGPSign.jpg}
+    \caption{Exemplo da assinatura e leitura através de par de chaves.}
+    \label{fig:par_chaves}
+\end{figure}
+
+\vspace{5mm}
+\textbf{Exemplo de chave RSA privada:}
+
+\begin{verbatim}
+    -----BEGIN RSA PRIVATE KEY-----
+    MIICXAIBAAKBgQCqGKukO1De7zhZj6+H0qtjTkVxwTCpvKe4eCZ0FPqri0cb2JZfXJ/DgYSF6vUp
+    wmJG8wVQZKjeGcjDOL5UlsuusFncCzWBQ7RKNUSesmQRMSGkVb1/3j+skZ6UtW+5u09lHNsj6tQ5
+    1s1SPrCBkedbNf0Tp0GbMJDyR4e9T04ZZwIDAQABAoGAFijko56+qGyN8M0RVyaRAXz++xTqHBLh
+    3tx4VgMtrQ+WEgCjhoTwo23KMBAuJGSYnRmoBZM3lMfTKevIkAidPExvYCdm5dYq3XToLkkLv5L2
+    pIIVOFMDG+KESnAFV7l2c+cnzRMW0+b6f8mR1CJzZuxVLL6Q02fvLi55/mbSYxECQQDeAw6fiIQX
+    GukBI4eMZZt4nscy2o12KyYner3VpoeE+Np2q+Z3pvAMd/aNzQ/W9WaI+NRfcxUJrmfPwIGm63il
+    AkEAxCL5HQb2bQr4ByorcMWm/hEP2MZzROV73yF41hPsRC9m66KrheO9HPTJuo3/9s5p+sqGxOlF
+    L0NDt4SkosjgGwJAFklyR1uZ/wPJjj611cdBcztlPdqoxssQGnh85BzCj/u3WqBpE2vjvyyvyI5k
+    X6zk7S0ljKtt2jny2+00VsBerQJBAJGC1Mg5Oydo5NwD6BiROrPxGo2bpTbu/fhrT8ebHkTz2epl
+    U9VQQSQzY1oZMVX8i1m5WUTLPz2yLJIBQVdXqhMCQBGoiuSoSjafUhV7i1cEGpb88h5NBYZzWXGZ
+    37sJ5QsW+sJyoNde3xH8vdXhzU7eT82D6X/scw9RZz+/6rCJ4p0=
+    -----END RSA PRIVATE KEY-----
+\end{verbatim}
+
+\vspace{5mm}
+\textbf{Exemplo de chave RSA pública:}
+
+\begin{verbatim}
+    -----BEGIN PUBLIC KEY-----
+    MIGfMA0GCSqGSIb3DQEBAQUAA4GNADCBiQKBgQCqGKukO1De7zhZj6+H0qtjTkVxwTCpvKe4eCZ0
+    FPqri0cb2JZfXJ/DgYSF6vUpwmJG8wVQZKjeGcjDOL5UlsuusFncCzWBQ7RKNUSesmQRMSGkVb1/
+    3j+skZ6UtW+5u09lHNsj6tQ51s1SPrCBkedbNf0Tp0GbMJDyR4e9T04ZZwIDAQAB
+    -----END PUBLIC KEY-----
+\end{verbatim}
+
+\cleardoublepage
+\subsubsection{Certificado X.509}
+
+As chaves públicas podem ser guardadas sob a forma de um certificado de chave pública. 
+
+O formato utilizado na geração deste certificado é designado por \emph{X.509}\cite{x509}, um padrão criado pela \gls{itu} em 1988.
+
+Este pode conter várias informações além da chave pública, sendo que ao abrigo do Autenticação.Gov, os certificados por ele utilizados contêm a seguinte informação:
+
+\begin{itemize}
+    \item Chave pública.
+    \item Nome da Entidade.
+    \item Entidade emissora.
+    \item Data de emissão.
+    \item Validade do certificado.
+    \item Informações de contacto.
+    \item etc.
+\end{itemize}
+
+Com o auxílio desta informação, é possível verificar e validar o certificado, como tendo sido emitido por uma entidade certificada, sendo este passo crucial para os pedidos de autenticação com o Cartão de Cidadão.
+
+De modo a garantir a validade do certificado, as seguintes regras têm de ser obedecidas:
+
+\begin{enumerate}
+    \item O certificado tem de possuir uma entidade emissora válida (neste caso, a plataforma \gls{clav} é a entidade emissora certificada pela \gls{ama}).
+    \item O certificado tem de possuir uma data de validade válida e não pode estar expirado.
+    \item O certificado não pode estar presente na lista de certificados revogados.
+    \item Todos os certificados da sua cadeia de certificação têm de ser válidos.
+\end{enumerate}
+
+Um objecto contendo as características previamente descritas pode ser representado através do padrão \emph{X.509}, sendo este utilizado como suporte para a \gls{pki} (Public Key Infrastucture).
+
+A estrutura definida pela \gls{pki} é utilizada de forma universal para a autenticação de utilizadores através de certificados de chave pública.\cite{pki}
+
+A utilização destes certificados, auxiliados pela utilização de um canal de comunicação seguro via \emph{HTTPS} e \emph{SSL} (explorado em detalhe na secção \ref{ssl_section}) garantem a autenticidade e confidencialidade necessárias à utilização de serviços sensíveis, como por exemplo, a autenticação com o auxílio do Cartão de Cidadão.
+
+\vspace{10mm}
+\textbf{Exemplo de Certificado X.509:}
+\begin{verbatim}
+    subject=/emailAddress=it@ama.pt/C=PT/L=Lisboa/O=AMA/OU=IT/CN=Autenticacao.Gov
+    issuer=/emailAddress=it@ama.pt/C=PT/L=Lisboa/O=AMA/OU=IT/CN=Autenticacao.Gov
+    -----BEGIN CERTIFICATE-----
+    MIIDzDCCArSgAwIBAgIGAWHCrFAKMA0GCSqGSIb3DQEBCwUAMHMxGDAWBgkqhkiG
+    9w0BCQETCWl0QGFtYS5wdDELMAkGA1UEBhMCUFQxDzANBgNVBAcTBkxpc2JvYTEM
+    MAoGA1UEChMDQU1BMQswCQYDVQQLEwJJVDEeMBwGA1UEAxMVQXV0ZW50aWNhY2Fv
+    LkdvdiBSYWl6MB4XDTE4MDIwNjEyMzg0OFoXDTI5MDIwNTEyMzg0OFowczEYMBYG
+    CSqGSIb3DQEJARMJaXRAYW1hLnB0MQswCQYDVQQGEwJQVDEPMA0GA1UEBxMGTGlz
+    Ym9hMQwwCgYDVQQKEwNBTUExCzAJBgNVBAsTAklUMR4wHAYDVQQDExVBdXRlbnRp
+    Y2FjYW8uR292IFjBkMB8GA1UdIwQYMBaAFLLBjPTQe0ItzZ3Cda8123axE-23971
+    iHk+GwTe8PDpMB0GA1UdDgQWBBSywYz00HtCLc2dwoh5PhsE3vDw6TASBgNVHRMB
+    Af8ECDAGAQH/AgEBMA4GA1UdDwEB/wQEAwICBDANBgkqhkiG9w0BAQsFAAOCAQEA
+    PIRDKpYrNQRd2/5/+Pm/xN1KXbk3uZUNPsL0T2Hz/RJoX7X3gg0+d1i9cem3izNP
+    hQXuh5GO4z+hTIBDfnpvPnjVbYZTZaApkO/GmdC6VpXBVfR4H8A7z1CzOQ52F81n
+    WHYfgpUXQfyCz1KPNw7ba4LYdiTaAg8Yyd6BmGb0ud5Pq235AzpbvJs9I7HniGMD
+    eVLH6asnt4RUkaJrIelrqSHC1ZJNXHA75LlQHkaaxG8mWnRmb4ikmaR923hca6oQ
+    1JyGrOvrVLTVKdNgy1wKSyA47HZzHLMto5EBxj/j5xKJ040MNN2N1Isg+kBEqkt+
+    pAR+Z3kctgfUVHton0cwJQ==
+    -----END CERTIFICATE-----
+\end{verbatim}
+
+
+\cleardoublepage
+\subsubsection{SAML 2.0} \label{saml_section}
 
 O \gls{saml} define um padrão standard para a troca de informação segura entre diversas entidades na Web.
 
@@ -496,8 +620,8 @@ A versão 2.0 do \gls{saml} foi aprovada pela \gls{oasis} em 2005, modificando o
 Na especificação técnica do \gls{saml} existem dois \emph{providers}:
 
 \begin{itemize}
-    \item \emph{Identity provider}: faculta a autenticação, verificando a identidade do utilizador, procedendo ao envio de informação para o \emph{Service provider}, juntamente com os níveis de acesso do utilizador.
-    \item \emph{Service provider}: requesita a autenticação ao \emph{Identity provider} de modo a proceder à autorização do utilizador.
+    \item \emph{Identity provider}: faculta a autenticação, verificando a identidade do utilizador, procedendo ao envio de informação para o \emph{Service provider}, juntamente com os níveis de acesso do utilizador (Autenticação.Gov).
+    \item \emph{Service provider}: requisita a autenticação ao \emph{Identity provider} de modo a proceder à autorização do utilizador (Plataforma \gls{clav}).
 \end{itemize}
 
 \begin{figure}[h]
@@ -520,8 +644,21 @@ Em suma, o \gls{saml} funciona através do partilha de informação sobre utiliz
 
 Após ser realizado um login com o auxílio do \emph{Identity Provider}, este pode enviar atributos SAML para o \emph{Service Provider} quando o utilizador tenta aceder a certos serviços. Por ventura, o \emph{Service Provider} requesita autorização e autenticação ao \emph{Identity Provider}.
 
+\newpage
+\subsubsection{SSL} \label{ssl_section}
 
-%\subsubsection{SSL/TLS}
+\newpage
+\subsection{Cartão de Cidadão}
+
+\begin{figure}[h]
+    \centering
+    \includegraphics[width=\textwidth]{img/cc/CartaoCidadao.png}
+    \caption{Exemplo de um Cartão de Cidadão\cite{ccPic}.}
+\end{figure}
+
+\subsubsection{Funcionamento do Cartão de Cidadão}
+
+\subsubsection{Especificação do Cartão de Cidadão}
 
 \cleardoublepage
 \section{Autenticação de pedidos via API}
