Reorganização e continuação tese

--- a/dissertation.tex
+++ b/dissertation.tex
@@ -131,7 +131,12 @@
 
 	% CHAPTER - State of the Art ---------------------
     \input{sections/2_sota.tex}
+    
+    % CHAPTER - Solution -----------------------
+    \input{sections/3_solucao.tex}
 
+    % CHAPTER - Implementation -----------------------
+    \input{sections/4_implementacao.tex}
 	% CHAPTER - Problem and Challenges ---------------
     %\input{sections/3_desafios.tex}
 	
@@ -142,7 +147,7 @@
     %\input{sections/5_aplicacao.tex}
 
 	% CHAPTER - Conclusion/Future Work --------------
-	\input{sections/3_conclusao.tex}
+	\input{sections/5_conclusao.tex}
 			
 	\bookmarksetup{startatroot} % Ends last part.
 	\addtocontents{toc}{\bigskip} % Making the table of contents look good.
