--- a/sec/acronyms.tex
+++ b/sec/acronyms.tex
@@ -14,6 +14,7 @@
 \newacronym{pki}{PKI}{Public key infrastucture}
 \newacronym{saml}{SAML}{Security Assertion Markup Language}
 \newacronym{stork}{STORK}{Secure identity across borders linked}
+\newacronym{fa}{FA}{Fornecedor de Autenticação}
 
 %%baseado com jwt
 \newacronym{jwt}{JWT}{JSON Web Token}
