--- a/sections/5_conclusao.tex
+++ b/sections/5_conclusao.tex
@@ -10,4 +10,4 @@ Após concluída esta etapa, foi realizada uma leitura sobre a ferramenta \emph{
 
 Por fim foi introduzida a noção de \emph{JSON Web Token} e o papel crucial que desempenham para o âmbito do projecto, a autenticação de chamadas à \gls{api} de dados.
 
-Como trabalho futuro, irá ser aprofundado o estudo realizado sobre o standard \gls{saml}, após o qual irão ser implementados mecanismos de autenticação baseados no \emph{Autenticação.Gov} (sendo estes realizados por Cartão de Cidadão e Chave Móvel Digital), bem como a implementação de autenticação via \gls{jwt} aos pedidos referentes à \gls{api}. Por fim, irá ser feito um novo estudo sobre os métodos de autenticação e segurança já implementados, podendo ser realizada uma melhoria dos mesmos.
+Como trabalho futuro, irá ser aprofundado o estudo realizado sobre o standard \gls{saml}, após o qual irão ser implementados mecanismos de autenticação baseados no \emph{Autenticação.Gov} (sendo estes realizados por Cartão de Cidadão e Chave Móvel Digital), bem como a implementação de autenticação via \gls{jwt} aos pedidos referentes à \gls{api}. Por fim, irá ser feito um novo estudo sobre os métodos de autenticação e segurança já implementados, podendo ser realizada uma melhoria dos mesmos
